--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -77,7 +77,7 @@ if (import.meta.env.SSR) {
 		<HowItWorks />
 	</div>
 
-	<Features />
+	<Features client:load compact={false} />
 
 	<SupportedFormats />
 
