--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -60,7 +60,7 @@ const alternateLanguages = LANGUAGES.map((lang) => ({
 		<HowItWorks />
 	</div>
 
-	<Features />
+	<Features client:load compact={false} />
 
 	<SupportedFormats />
 
