--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -66,7 +66,7 @@ const alternateLanguages = LANGUAGES.map((lang) => ({
 
 	<Testimonials />
 
-	<FAQ />
+	<FAQ client:load />
 </MainLayout>
 
 <style is:global>
